fixed overflow by recharging the page

--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
-/* src/index.css */
 @import "tailwindcss";
 
 html, body {
   height: 100%;
   overscroll-behavior: none;
   touch-action: pan-y;
+  overflow: hidden;
 }
 
 #root {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
